Fixed box alignment and color

--- a/style.css
+++ b/style.css
@@ -1,31 +1,44 @@
+.content {
+    max-width: 450px;
+    margin: auto;
+    background:rgb(57, 63, 58);
+    border:rgb(16, 56, 23) solid;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-bottom: 200px;
+    
+}
 h1{
-    font-size: 75px;
+    font-size: 100px;
     font-family: cursive;
-    color: rgba(211, 130, 9, 0.719);
+    color: rgba(7, 116, 241, 0.966);
     text-align: center;
+    padding: 30px;
+    border: 10px rgba(20, 159, 240, 0.507) solid;
 }
 body { 
     background: rgb(139, 122, 100)
 }
-.content {
-    max-width: 500px;
-    margin: 0 auto;
-    background:rgb(57, 63, 58);
-    padding: 150px;
-}
+
 .img-responsive{
-    width: 100%;
-    height: auto;
+   width: 100%;
+   height: auto;
+   border: 5px solid rgba(255, 136, 0, 0.658);
    
+   box-sizing: border-box;
 }
 
 .description{
     font-size: 35px;
     font-family: "Helvetica Neue",Helvetica,Arial;
-    color: rgba(166, 139, 201, 0.877);
+    color: rgba(156, 121, 6, 0.877);
+    margin: 2px;
+    padding: 10px;
+    border: 10px rgba(8, 89, 92, 0.685) solid;
+    text-align: center;
 }
 
-h3, h4 {
+h4 {
     font-size: 25px;
     text-align: center;
     color: rgb(172, 135, 68);
